# glang

./: .clangd  .gitignore  AST.cpp  AST.h  CMakeLists.txt  Optimization.md  README.md  compiler.h  glang.vim  if.ar  index.html  main.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  test.ar  type.h  unique_ref.h
AST/: AST.h
pages/: index.md
programs/: arithmetic.gg  array.gg  assert.gg  bitcast.gg  bitwise.gg  break_continue.gg  character.gg  enum.gg  fac.ar  fac.gg  fadd.gg  fib.ar  fib.gg  fnptr.gg  fold.gg  global.gg  if.ar  if.gg  intrinsics.gg  linkedlist.gg  member.gg  nestedstruct.gg  pointer.gg  range.gg  string.ar  struct.gg  sudoku.gg  sum.gg  test.gg  unwrap.gg  (+1 more)
src/: AST.cpp  AST.h  AST_Visitor.cpp  AST_Visitor.h  CMakeLists.txt  GIR.h  array_allocator.h  builtins.cpp  builtins.h  cli.cpp  cli.h  codegen.cpp  codegen.h  common.cpp  common.h  compiler.cpp  context.cpp  context.h  control.cpp  control.h  diagnostic.cpp  diagnostic.h  ids.h  interpreter.h  intrinsic.h  layout.cpp  layout.h  location.h  main.cpp  memory.h  namespace.cpp  namespace.h  parser.cpp  parser.h  resolution.h  scanner.cpp  scanner.h  scope.h  templates.h  token.cpp  (+8 more)
src/GIR/: README.md  codegen.cpp  print.h
src/containers/: CMakeLists.txt  bitmap.h  hash.cpp  hash.h  hash_map.h  optional.h  pointer.h  pointer_map.h  small_byte_array.h  span.h  string.cpp  string.h  string_map.h  symbol_map.h  symbol_table.cpp  symbol_table.h
src/namespace/: CMakeLists.txt  enum.cpp  enum.h  struct.cpp  struct.h
src/parser/: CMakeLists.txt  errors.cpp  errors.h  rules.h
src/resolution/: CMakeLists.txt  identifier.cpp  identifier.h  member.cpp  member.h
src/sema/: CMakeLists.txt  fold.cpp  fold.h
src/sema/fold/: CMakeLists.txt  integer.cpp  integer.h
src/type/: CMakeLists.txt  enum.cpp  enum.h  format.h  struct.cpp  struct.h  visitor.h
src/typecheck/: CMakeLists.txt  aggregate.cpp  aggregate.h  assignment.cpp  assignment.h  binary.cpp  coerce.cpp  coerce.h  enum.cpp  enum.h  expression.cpp  expression.h  expression_lvalue.cpp  internal.h  intrinsic.cpp  resolver.h  scope.h  unary.cpp  unify.cpp  unify.h  util.h
src/util/: stopwatch.h
(+63 files in other folders)
